# best-select

./: .dockerignore  AGENT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: backend-ci.yml  deploy-pages.yml
backend/app/: main.py
backend/app/core/: config.py
backend/app/data_sources/: xalpha_adapter.py
backend/app/db/: __init__.py  supabase_client.py
backend/app/services/: market_service.py
backend/tests/: test_healthz.py
docs/: Strategy_DuoKongZhuanZheYiShouZhua.md  Strategy_DuoKongZhuanZheYiShouZhua.tex  Strategy_DuoKongZhuanZheYiShouZhua_core.md  analysis-uv-fastapi-xalpha.md  deployment-plan-render-ghpages-supabase.md  framework-evaluation-fastapi-vs-flask.md  index.html  initial-planning.md  planning-v2.md  planning-v3-architecture.md
docs/sql/: init_supabase.sql
