[project]
name = "best-select-backend"
version = "0.1.0"
description = "FastAPI backend for best-select"
readme = "README.md"
requires-python = ">=3.8,<3.9"
dependencies = [
  "fastapi==0.110.3",
  "uvicorn[standard]==0.30.6",
  "xalpha==0.12.3",
  "pandas==1.5.3",
  "pydantic==2.10.6",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.5",
  "httpx==0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]

[tool.uv]
package = false
